--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,12 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.13
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
